# yandex_maps_parser_bot

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  worker-entrypoint.sh
src/: main.py
src/celery/: __init__.py  celery.py  tasks.py
src/clients/postgres_client/: postgres_connector.py
src/config/: config.py
src/di/: __init__.py  container.py  di.py  repository_container.py
src/exceptions/parser_exceptions/: __init__.py  parser_exceptions.py
src/exceptions/presenter_exceptions/: __init__.py  presenter_exceptions.py
src/model/models/: constants.py  models.py
src/model/repository/: __init__.py  user_system.py
src/model/repository/sources/user_system/: queries.py  user_system_postgres.py
src/parser/: __init__.py  utils.py  yandex_maps_parser.py
src/presenter/: presenter.py
src/view/fsm/: __init__.py  fsm_repository.py
src/view/handlers/: handlers.py
src/view/keyboards/: __init__.py  callbacks.py  enums.py  keyboards.py  states.py
src/view/templates/: __init__.py  text_data.json  text_data.py
